docs/auditor/10.6/configuration/microsoft365/microsoftentraid/permissions/modernauth/manifest.md
---
title: "Assign Application Permissions Using Manifest"
description: "Assign Application Permissions Using Manifest"
sidebar_position: 10
---

# Assign Application Permissions Using Manifest

Follow the steps to assign application permissions using manifest.

**Step 1 –** Under App registrations, select the newly created app.

**Step 2 –** Select **Manifest** on the left.

**Step 3 –** Locate the **requiredResourceAccess** property in the manifest and edit it with the
following in the square brackets ([]).

**Step 4 –** Click **Save**.

Optionally, you can select **Download** to edit the manifest locally, and then use Upload to reapply
it to your application.

The following Application permissions will be added:

- Microsoft Graph

    - Directory.Read.All
    - AuditLog.Read.All

- Microsoft 365 Management APIs

    - ActivityFeed.Read

For the clear installation of Auditor, add roles as described below.

```
{
    "resourceAppId": "00000003-0000-0000-c000-000000000000",
    "resourceAccess": [
        {
            "id": "b0afded3-3588-46d8-8b3d-9842eff778da",
            "type": "Role"
        },
        {
            "id": "7ab1d382-f21e-4acd-a863-ba3e13f7da61",
            "type": "Role"
        }
    ]
},
{
    "resourceAppId": "c5393580-f805-4401-95e8-94b7a6ef2fc2",
    "resourceAccess": [
        {
            "id": "594c1fb6-4f81-4475-ae41-0c394909246c",
            "type": "Role"
        }
    ]
}

```
